k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-retail
  labels:
    app.kubernetes.io/part-of: aurastore
