k8s/03-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: production-retail
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 10.10.10.2:31771/api-gateway:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: production-retail
  labels:
    app: api-gateway
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
  type: ClusterIP
