k8s/04-storefront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  namespace: production-retail
  labels:
    app: storefront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          image: 10.10.10.2:31771/storefront:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
  namespace: production-retail
spec:
  ports:
    - name: http-3000
      port: 3000
      targetPort: 3000
  selector:
    app: storefront
  type: ClusterIP
