k8s/15-istio-servicemonitors.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-waypoint-metrics
  namespace: production-retail
  labels:
    istio.io/waypoint-for: service
spec:
  selector:
    app.kubernetes.io/name: waypoint
  ports:
    - name: http-envoy-prom
      port: 15090
      targetPort: 15090
      protocol: TCP
