k8s/12-traffic-split.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-stable
  namespace: production-retail
  labels:
    app: catalog-service
    version: stable
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: catalog-service
    version: stable
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-canary
  namespace: production-retail
  labels:
    app: catalog-service
    version: canary
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: catalog-service
    version: canary
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-traffic-split
  namespace: production-retail
spec:
  parentRefs:
    - name: waypoint
      namespace: production-retail
      kind: Gateway
  hostnames:
    - "catalog-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: catalog-stable
          port: 8082
          weight: 90
        - name: catalog-canary
          port: 8082
          weight: 10
