k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-retail-ingress
  namespace: local-retail
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: local.aurastore.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: storefront-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-service
                port:
                  number: 3000
